src/app/modals/client-details/client-details.modal.scss
.main-container {
  display: flex;
  position: absolute;
  top: 50px;
  width: 100%;
  height: calc(100% - 50px);
  z-index: 3;
  align-items: center;
  justify-content: center;
}

.form-container {
  width: 90%;
  max-width: 450px;
  display: flex;
  flex-direction: column;
  background-color: aqua;
  z-index: 3;
  padding: 5px;
}

.form-header {
  width: calc(100% - 20px);
  text-align: center;
  font-weight: bold;
  margin: 10px;
}

.form-line {
  display: flex;
  width: 100%;
  flex-direction: row;
  padding: 5px;
  align-items: center;
  height: 25px;
}

.form-line-title {
  width: 40%;
}

.button-container {
  display: flex;
  width: calc(100% - 20px);
  flex-wrap: nowrap;
  flex-direction: column;
  margin: 10px;
}

.remove-button {
  display: flex;
  width: calc(100% - 30px);
  margin: 0 15px;
  margin-bottom: 10px;
}

.time-selector {
  width: 60px;
  background-color: white;
  height: 25px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-left: 5px;
}

input {
  width: 172px;
  border: none;
  height: 25px;
  padding-left: 5px;
}

.date-input {
  width: 130px;
  border: none;
  height: 25px;
  padding-left: 5px;
}

button {
  display: flex;
  flex-grow: 1;
  margin: 5px;
  justify-content: center;
  align-items: center;
  height: 25px;
}

.mid-selector-container {
  padding: 0 10px;
}

.client-selector {
  width: 172px;
  background-color: white;
  height: 25px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-left: 5px;
}

